Added the rest of the select options

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,11 +20,14 @@
 				<label>Themes </label>
 				<select ng-model="search.themes">
 					<option value=""> - </option>
-					<option value="biodiversity">biodiversity</option>
-					<option value="food garden">food garden</option>
+					<option value="biodiversity">Biodiversity</option>
+                    <option value="energy">Energy</option>
+					<option value="food garden">Food garden</option>
+                    <option value="general">General</option>
 					<option value="Youth Voice">Youth Voice</option>
 					<option value="Outdoor play space">Outdoor play space</option>
-                    <option value="Waste">Waste</option>
+                    <option value="waste">Waste</option>
+                    <option value="water">Water</option>
 				</select>
 			</div>
 
@@ -32,11 +35,12 @@
                 <label>Education for Sustainability aspects </label>
                 <select ng-model="search.EFSustainabilityA">
                     <option value=""> - </option>
+                    <option value="Community">Community</option>
                     <option value="Curriculum">Curriculum and learning</option>
+                    <option value="Governance">Governance</option>
                     <option value="Vision">Vision and values</option>
                     <option value="Whole">Whole site approach</option>
-                    <option value="Governance">Governance</option>
-                    <option value="Community">Community</option>
+                    <option value="youth">Youth advice</option>
                 </select>
             </div>
 
