--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,7 +40,7 @@
                     <option value="Governance">Governance</option>
                     <option value="Vision">Vision and values</option>
                     <option value="Whole">Whole site approach</option>
-                    <option value="youth">Youth advice</option>
+                    <option value="youth">Youth voice</option>
                 </select>
             </div>
 
@@ -69,17 +69,17 @@
 			<div ng-repeat="study in allData | filter:search | orderBy: 'title' " class="study ng-cloak" href="{{::study.studyURL}}">
 
 				<div class="study__image">
-					<a href="{{::study.studyURL}}"><img ng-src="{{::study.imageURL}}" alt="thumbnail for {{::study.title}}"></a>
+					<a href="{{::study.studyURL}}" target="_blank"><img ng-src="{{::study.imageURL}}" alt="thumbnail for {{::study.title}}"></a>
 				</div>
 
 				<div class="study__details">
-					<a href="{{::study.studyURL}}"><h2 class="details__title">{{::study.title}}</h2></a>
-					<p class="details__schools"><em>School/s:</em> {{::study.schools}}</p>
+					<a href="{{::study.studyURL}}" target="_blank"><h2 class="details__title">{{::study.title}}</h2></a>
+					<p class="details__schools"><em>(pre)School/s:</em> {{::study.schools}}</p>
 					<p class="details__yrLevel"><em>Year level:</em> {{::study.yrLevel}}</p>
 					<p class="details__progress"><em>Progress:</em> {{::study.progress}}</p>
 					<p class="details__efsp"><em>Education for Sustainability aspects:</em> {{::study.EFSustainabilityA}}</p>
 					<p class="details__themes"><em>Themes:</em> {{::study.themes}}</p>
-                    <a class="details__icon" href="{{::study.studyURL}}">&nbsp;</a>
+                    <a class="details__icon" href="{{::study.studyURL}}" target="_blank">&nbsp;</a>
                     <!-- Only for back end display -->
 					<!-- <p class="details__date"><em>date:</em> {{::study.date}}</p>
 					<p class="details__author"><em>author:</em> {{::study.author}}</p> -->
