remove tool tip

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 	<div ng-controller="StudiesController" class="studieswrap">
 		<div class="searchInputs">
 			<div class="searchcontrol">
-				<label>Search <span class="tooltiptext">Enter words that may best describe the studies you're looking for.</span></label><input ng-model="search.$" type="text" min="0" >
+				<label>Search </label><input ng-model="search.$" type="text" min="0" >
 			</div>
 
 			<div class="themescontrol">
