changes to make local fit better when uploaded to AMLR website, style tweaks, inline JSON data

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,11 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AMLR Case Studies</title>
+    <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/e0cc203f-7221-4daf-a2d5-815483dba107.css" media="screen" />
 	<link rel="stylesheet" href="//www.naturalresources.sa.gov.au/files/templates/00000000-0000-0000-0000-000000000000/f399c717-3483-4ac4-ac72-f5b9f904f8c1/main-ffbe7f0cba.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div ng-app="caseStudies" class="studies-page-wrap">
+<div id="content" class="studies-page-wrap">
+
+<!-- code to paste into template -->
+<div ng-app="caseStudies">
 	<h1>Case studies</h1>
     <p class="intro-text">NRM Education works with many schools and early learning sites that are working towards sustainability. Below are written, audio and video case studies to inspire you. There are several choices to narrow down your search.</p>
 	<div ng-controller="StudiesController" class="studieswrap">
@@ -90,6 +94,9 @@
 		</div>
 
 	</div>
+
+</div>
+<!-- End code to paste into template -->
 
 </div>
 
