--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 <div id="content" class="studies-page-wrap">
+<h1>Case studies</h1>
 
 <!-- code to paste into template -->
 <div ng-app="caseStudies">
-	<h1>Case studies</h1>
+
     <p class="intro-text">NRM Education works with many schools and early learning sites that are working towards sustainability. Below are written, audio and video case studies to inspire you. There are several choices to narrow down your search.</p>
 	<div ng-controller="StudiesController" class="studieswrap">
 		<div class="searchInputs">
@@ -106,14 +107,20 @@
 	</div>
 
 </div>
+<!-- AMLR DLV Case Studies JSON -->
+<!--WebUserControl-->AMLR DLV Case Studies JSON<!--/WebUserControl-->
+<!-- End AMLR DLV Case Studies JSON -->
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.11/angular-filter.min.js"></script>  <!-- from here - https://github.com/a8m/angular-filter#get-started -->
+<script src="js/controller.js"></script>
+
 <!-- End code to paste into template -->
+
 
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.11/angular-filter.min.js"></script>  <!-- from here - https://github.com/a8m/angular-filter#get-started -->
-<script src="js/controller.js"></script>
+
 <!-- <script src="js/main.js"></script> -->
 
 
