--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,6 +53,7 @@
                         <option value="community">Community</option>
                         <option value="curriculum">Curriculum and learning</option>
                         <option value="governance">Governance</option>
+                        <option value="inquiry">Inquiry</option>
                         <option value="vision">Vision and values</option>
                         <option value="whole">Whole site approach</option>
                         <option value="youth">Youth voice</option>
