improvements continued. added ng-change to search input to update url hash. Gets url hash on page load to preset search.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
                 <legend>Search </legend>
 
     			<div class="searchcontrol">
-    				<label>Search </label><input ng-model="search.$" type="text" min="0" >
+    				<label>Search </label><input ng-model="search.$" ng-change="change()" type="text" min="0" >
     			</div>
 
     			<div class="themescontrol">
