changes, fixes - release version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
 	<title>AMLR Case Studies</title>
     <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/e0cc203f-7221-4daf-a2d5-815483dba107.css" media="screen" />
 	<link rel="stylesheet" href="//www.naturalresources.sa.gov.au/files/templates/00000000-0000-0000-0000-000000000000/f399c717-3483-4ac4-ac72-f5b9f904f8c1/main-ffbe7f0cba.css">
-	<link rel="stylesheet" href="css/main.css">
+	<!-- <link rel="stylesheet" href="css/casestudies.css"> -->
     <base href="/">
 </head>
 <body>
@@ -17,7 +17,7 @@
 <h1>Case studies</h1>
 
 <!-- code to paste into template -->
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/casestudies.css">
 
 <ItemData DataDefinition="DC_Title" Template="HTML" />
 <div ng-app="caseStudies">
